--- a/src/main/resources/views/admin/Revenue.fxml
+++ b/src/main/resources/views/admin/Revenue.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.RevenueController">
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.RevenueController">
    <children>
       <VBox layoutX="39.0" layoutY="14.0">
          <children>
@@ -23,7 +22,7 @@
                      <children>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <FontIcon />
+                              <FontIcon iconLiteral="" />
                            </children>
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0">
@@ -136,14 +135,14 @@
             </VBox>
          </children>
       </HBox>
-      <VBox layoutX="14.0" layoutY="260.0">
+      <VBox layoutX="61.0" layoutY="278.0">
          <children>
             <LineChart>
               <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <CategoryAxis label="Date" side="BOTTOM" />
               </xAxis>
               <yAxis>
-                <NumberAxis side="LEFT" />
+                <NumberAxis label="Sales" side="LEFT" />
               </yAxis>
             </LineChart>
          </children>
