--- a/src/main/resources/views/product/CustomOrder.fxml
+++ b/src/main/resources/views/product/CustomOrder.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 
-
 <AnchorPane prefHeight="640.0" prefWidth="865.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller=" com.cakeshopsystem.controllers.product.CustomOrderController">
    <children>
-      <ScrollPane fx:id="customCakePane" layoutY="-3.0" prefHeight="640.0" prefWidth="865.0">
+      <ScrollPane layoutY="-3.0" prefHeight="640.0" prefWidth="865.0">
          <content>
-            <FlowPane prefHeight="631.0" prefWidth="854.0" />
+            <FlowPane fx:id="customCakePane" prefHeight="631.0" prefWidth="854.0" />
          </content>
       </ScrollPane>
    </children>
