--- a/src/main/resources/views/Cart.fxml
+++ b/src/main/resources/views/Cart.fxml
@@ -21,5 +21,6 @@
     </TableView>
    <ComboBox fx:id="cbPaymentOptions" promptText="Select Payment" translateY="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
 
-    <Button onAction="#onConfirmOrder" text="Confirm Order" translateY="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+    <Button fx:id="confirmOrderBtn" onAction="#onConfirmOrder" text="Confirm Order" translateY="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+   <Label fx:id="lblTotalAmount" text="Label" translateX="450.0" translateY="40.0" AnchorPane.bottomAnchor="0.0" />
 </AnchorPane>
