--- a/src/main/resources/views/Receipt.fxml
+++ b/src/main/resources/views/Receipt.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <VBox xmlns="http://javafx.com/javafx/25"
       xmlns:fx="http://javafx.com/fxml/1"
@@ -11,6 +12,9 @@
       prefWidth="520">
 
     <VBox fx:id="receiptRoot" spacing="8">
+        <padding>
+            <Insets top="16" right="16" bottom="16" left="16"/>
+        </padding>
         <Label text="Receipt" styleClass="title"/>
 
         <GridPane hgap="10" vgap="6">
@@ -34,7 +38,7 @@
 
         <Separator/>
 
-        <ScrollPane fitToWidth="true">
+        <ScrollPane fx:id="spItems" fitToWidth="true" VBox.vgrow="ALWAYS">
             <VBox fx:id="itemsBox" spacing="10"/>
         </ScrollPane>
 
