--- a/src/main/resources/views/Cart.fxml
+++ b/src/main/resources/views/Cart.fxml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.CartController">
-    <Label styleClass="title" text="Shopping Cart" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.cakeshopsystem.controllers.CartController">
 
-    <TableView fx:id="tblCart" layoutY="60.0" prefHeight="420" prefWidth="760">
-        <columns>
-            <TableColumn fx:id="colName" prefWidth="260" text="Name" />
-            <TableColumn fx:id="colPrice" prefWidth="120" text="Price" />
-            <TableColumn fx:id="colQty" prefWidth="90" text="Qty" />
-            <TableColumn fx:id="colSub" prefWidth="140" text="Subtotal" />
-            <TableColumn fx:id="colActions" prefWidth="140" text="Actions" />
-        </columns>
-    </TableView>
-   <ComboBox fx:id="cbPaymentOptions" promptText="Select Payment" translateY="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+    <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <TableView fx:id="tblCart" layoutY="60.0" prefHeight="420" prefWidth="760" AnchorPane.bottomAnchor="50.0"
+                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <columns>
+                <TableColumn fx:id="colName" prefWidth="260" text="Name"/>
+                <TableColumn fx:id="colPrice" prefWidth="120" text="Price"/>
+                <TableColumn fx:id="colQty" prefWidth="90" text="Qty"/>
+                <TableColumn fx:id="colSub" prefWidth="140" text="Subtotal"/>
+                <TableColumn fx:id="colActions" prefWidth="140" text="Actions"/>
+            </columns>
+        </TableView>
+        <HBox alignment="CENTER_RIGHT" spacing="20.0">
+            <ComboBox fx:id="cbPaymentOptions" promptText="Select Payment" AnchorPane.bottomAnchor="0.0"
+                      AnchorPane.leftAnchor="0.0"/>
+            <Label fx:id="lblTotalAmount" text="Label" AnchorPane.bottomAnchor="0.0"/>
 
-    <Button fx:id="confirmOrderBtn" onAction="#onConfirmOrder" text="Confirm Order" translateY="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-   <Label fx:id="lblTotalAmount" text="Label" translateX="450.0" translateY="40.0" AnchorPane.bottomAnchor="0.0" />
+            <Button fx:id="confirmOrderBtn" onAction="#onConfirmOrder" text="Confirm Order"
+                    AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+        </HBox>
+    </VBox>
+    <padding>
+        <Insets bottom="20.0" left="40.0" right="40.0" top="40.0"/>
+    </padding>
 </AnchorPane>
