--- a/src/main/resources/views/RegisterMember.fxml
+++ b/src/main/resources/views/RegisterMember.fxml
@@ -12,26 +12,25 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.cakeshopsystem.controllers.RegisterMemberController">
+<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.RegisterMemberController">
 
-    <VBox spacing="16">
+    <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="380.0" spacing="16">
 
         <padding>
-            <Insets bottom="16" left="16" right="16" top="16"/>
+            <Insets bottom="16" left="16" right="16" top="16" />
         </padding>
 
         <!-- Header -->
-        <Label styleClass="sub-title" text="Register Customer as a Member"/>
+        <Label styleClass="sub-title" text="Register Customer as a Member" />
 
         <!-- Step 1: Confirmation -->
         <VBox fx:id="confirmationBox" spacing="12">
-            <Label text="This order qualifies for membership. Register now?"/>
+            <Label text="This order qualifies for membership. Register now?" />
 
             <HBox alignment="CENTER_RIGHT" spacing="10">
-                <Region HBox.hgrow="ALWAYS"/>
-                <Button fx:id="btnCancel" text="Cancel"/>
-                <Button fx:id="btnConfirm" defaultButton="true" text="Yes, Register"/>
+                <Region HBox.hgrow="ALWAYS" />
+                <Button fx:id="btnCancel" text="Cancel" />
+                <Button fx:id="btnConfirm" defaultButton="true" text="Yes, Register" />
             </HBox>
         </VBox>
 
@@ -40,26 +39,25 @@
 
             <GridPane hgap="10" vgap="10">
                 <columnConstraints>
-                    <ColumnConstraints minWidth="110" prefWidth="120"/>
-                    <ColumnConstraints hgrow="ALWAYS"/>
+                    <ColumnConstraints minWidth="110" prefWidth="120" />
+                    <ColumnConstraints hgrow="ALWAYS" />
                 </columnConstraints>
 
-                <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-                <TextField fx:id="txtName" promptText="Enter full name" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="txtName" promptText="Enter full name" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Phone Number" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-                <TextField fx:id="txtPhone" promptText="Enter phone number" GridPane.columnIndex="1"
-                           GridPane.rowIndex="1"/>
+                <Label text="Phone Number" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField fx:id="txtPhone" promptText="Enter phone number" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 <rowConstraints>
-                    <RowConstraints/>
-                    <RowConstraints/>
+                    <RowConstraints />
+                    <RowConstraints />
                 </rowConstraints>
             </GridPane>
 
             <HBox alignment="CENTER_RIGHT" spacing="10">
-                <Region HBox.hgrow="ALWAYS"/>
-                <Button fx:id="btnBack" text="Back"/>
-                <Button fx:id="btnRegister" defaultButton="true" text="Register"/>
+                <Region HBox.hgrow="ALWAYS" />
+                <Button fx:id="btnBack" text="Back" />
+                <Button fx:id="btnRegister" defaultButton="true" text="Register" />
             </HBox>
         </VBox>
 
