--- a/src/main/resources/views/admin/Revenue.fxml
+++ b/src/main/resources/views/admin/Revenue.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.RevenueController">
+<AnchorPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.RevenueController">
    <children>
       <VBox layoutX="39.0" layoutY="14.0">
          <children>
@@ -22,7 +22,7 @@
                      <children>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <FontIcon iconLiteral="" />
+                              <FontIcon />
                            </children>
                         </VBox>
                         <VBox prefHeight="200.0" prefWidth="100.0">
@@ -34,7 +34,7 @@
                               </HBox>
                               <HBox prefHeight="50.0" prefWidth="100.0">
                                  <children>
-                                    <Label fx:id="lblTotalMembersResult" />
+                                    <Label fx:id="lblTotalMembersResult" text="0" />
                                  </children>
                               </HBox>
                            </children>
@@ -57,7 +57,7 @@
                               </HBox>
                               <HBox prefHeight="48.0" prefWidth="100.0">
                                  <children>
-                                    <Label fx:id="lblTotalOrdersResult" />
+                                    <Label fx:id="lblTotalOrdersResult" text="0" />
                                  </children>
                               </HBox>
                            </children>
@@ -84,7 +84,7 @@
                               </HBox>
                               <HBox prefHeight="50.0" prefWidth="100.0">
                                  <children>
-                                    <Label fx:id="lblTotalSalesResult" />
+                                    <Label fx:id="lblTotalSalesResult" text="0" />
                                  </children>
                               </HBox>
                            </children>
@@ -107,7 +107,7 @@
                               </HBox>
                               <HBox prefHeight="50.0" prefWidth="100.0">
                                  <children>
-                                    <Label fx:id="lblTotalCancelResult" />
+                                    <Label fx:id="lblTotalCancelResult" text="0" />
                                  </children>
                               </HBox>
                            </children>
@@ -135,14 +135,14 @@
             </VBox>
          </children>
       </HBox>
-      <VBox layoutX="61.0" layoutY="278.0">
+      <VBox layoutX="14.0" layoutY="260.0">
          <children>
-            <LineChart>
+            <LineChart fx:id="revenueLineChart">
               <xAxis>
-                <CategoryAxis label="Date" side="BOTTOM" />
+                <CategoryAxis fx:id="xAxis" label="Date"/>
               </xAxis>
               <yAxis>
-                <NumberAxis label="Sales" side="LEFT" />
+                <NumberAxis fx:id="yAxis" label="Revenue (MMK)" />
               </yAxis>
             </LineChart>
          </children>
