--- a/src/main/resources/views/admin/UserCard.fxml
+++ b/src/main/resources/views/admin/UserCard.fxml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
+<VBox prefHeight="270.0" prefWidth="200.0"
+      xmlns="http://javafx.com/javafx/24.0.1"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.cakeshopsystem.controllers.admin.UserCardController"
+      spacing="10" alignment="CENTER">
 
-<VBox prefHeight="270.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ImageView fx:id="userImage" fitHeight="137.0" fitWidth="162.0" pickOnBounds="true" preserveRatio="true">
-         <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" />
-         </VBox.margin>
-      </ImageView>
-      <Label fx:id="lblUserName" text="User Name">
-         <VBox.margin>
-            <Insets left="70.0" />
-         </VBox.margin>
-      </Label>
+    <children>
+        <ImageView fx:id="userImage" fitHeight="137.0" fitWidth="162.0" pickOnBounds="true" preserveRatio="true"/>
 
-      <Label fx:id="lblOrderCount" text="Order Count">
-         <VBox.margin>
-            <Insets left="65.0" top="10.0" />
-         </VBox.margin>
-      </Label>
-   </children>
+        <Label fx:id="lblUserName" />
+
+        <Label fx:id="lblOrderCount" text="Orders: 0"/>
+    </children>
 </VBox>
