add custom cake order flow

--- a/src/main/resources/views/DiyOrder.fxml
+++ b/src/main/resources/views/DiyOrder.fxml
@@ -6,9 +6,23 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.cakeshopsystem.controllers.DiyOrderController"
-            prefHeight="400.0" prefWidth="600.0">
-
+            styleClass="container">
+    <StackPane fx:id="mainStackPane" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+        <ScrollPane fx:id="mainScrollPane"
+                    fitToWidth="true"
+                    hbarPolicy="NEVER">
+            <FlowPane fx:id="mainFlowPane"
+                      hgap="20.0"
+                      vgap="20.0">
+                <padding>
+                    <Insets top="20.0" bottom="20.0" left="20.0" right="20.0"/>
+                </padding>
+            </FlowPane>
+        </ScrollPane>
+        <Button fx:id="btnCreateDiyOrder" mnemonicParsing="false" text="Create Custom Order" StackPane.alignment="TOP_RIGHT" />
+    </StackPane>
 </AnchorPane>
