--- a/src/main/resources/assets/css/base.css
+++ b/src/main/resources/assets/css/base.css
@@ -77,6 +77,39 @@
     -fx-border-color: -app-accent-color;
     -fx-border-width: 1.2px;
 }
+
+.text-area {
+    -fx-min-height: 40;
+    -fx-pref-height: 40;
+    -fx-max-height: 40;
+
+    -fx-background-radius: 10;
+    -fx-border-radius: 10;
+
+    -fx-font-size: 14;
+    -fx-prompt-text-fill: rgba(0, 0, 0, 0.45);
+
+    -fx-border-color: -app-border-color;
+    -fx-border-width: 1;
+}
+
+.text-area:focused {
+    -fx-prompt-text-fill: rgba(0, 0, 0, 0.55);
+    -fx-border-color: -app-accent-color;
+    -fx-border-width: 1.2px;
+}
+
+.text-area .text,
+.text-field,
+.password-field {
+    -fx-prompt-text-fill: rgba(0, 0, 0, 0.45);
+}
+
+.text-area:focused .text,
+.text-field:focused,
+.password-field:focused {
+    -fx-prompt-text-fill: rgba(0, 0, 0, 0.55);
+}
 /* =========================
    ComboBox (theme-matched)
    ========================= */
