--- a/src/main/resources/views/AddProduct.fxml
+++ b/src/main/resources/views/AddProduct.fxml
@@ -8,14 +8,13 @@
 <AnchorPane xmlns="http://javafx.com/javafx/25"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.cakeshopsystem.controllers.AddProductController">
+    <padding>
+        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
+    </padding>
 
     <VBox spacing="16"
           AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0"
           AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0">
-
-        <padding>
-            <Insets top="20" right="20" bottom="20" left="20"/>
-        </padding>
 
         <!-- Category selector -->
         <HBox alignment="CENTER" spacing="12">
