--- a/src/main/resources/views/CustomOrder.fxml
+++ b/src/main/resources/views/CustomOrder.fxml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cakeshopsystem.controllers.CustomOrderController"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.geometry.Insets?>
+<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.cakeshopsystem.controllers.CustomOrderController" styleClass="container">
+    <StackPane fx:id="mainStackPane" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0"
+               AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
 
+        <ScrollPane fx:id="mainScrollPane"
+                    fitToWidth="true"
+                    hbarPolicy="NEVER">
+            <FlowPane fx:id="mainFlowPane"
+                      hgap="20.0"
+                      vgap="20.0">
+                <padding>
+                    <Insets top="20.0" bottom="20.0" left="20.0" right="20.0"/>
+                </padding>
+            </FlowPane>
+        </ScrollPane>
+        <Button fx:id="btnCreateCustomOrder" mnemonicParsing="false" text="Create Custom Order"
+                StackPane.alignment="TOP_RIGHT"/>
+    </StackPane>
 </AnchorPane>
