--- a/src/main/resources/views/LoginForm.fxml
+++ b/src/main/resources/views/LoginForm.fxml
@@ -18,115 +18,99 @@
 
 <StackPane fx:id="loginStackPane" styleClass="root" xmlns="http://javafx.com/javafx/25"
            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.LoginFormController">
-    <children>
-        <!-- Main Content -->
-        <VBox alignment="CENTER" maxWidth="700.0" StackPane.alignment="CENTER">
-            <children>
-                <HBox prefHeight="400.0" styleClass="container">
-                    <children>
-                        <VBox HBox.hgrow="ALWAYS">
-                            <children>
-                                <HBox VBox.vgrow="ALWAYS">
-                                    <children>
-                                        <Label styleClass="title" text="Login Form"/>
-                                    </children>
-                                </HBox>
-                                <HBox minWidth="300.0" VBox.vgrow="NEVER">
-                                    <children>
-                                        <GridPane alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" vgap="5.0"
-                                                  HBox.hgrow="ALWAYS">
-                                            <columnConstraints>
-                                                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES"
-                                                                   maxWidth="1.7976931348623157E308"/>
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                                <RowConstraints valignment="CENTER"/>
-                                                <RowConstraints vgrow="SOMETIMES"/>
-                                                <RowConstraints valignment="CENTER"/>
-                                                <RowConstraints vgrow="SOMETIMES"/>
-                                                <RowConstraints vgrow="SOMETIMES"/>
-                                                <RowConstraints valignment="CENTER"/>
-                                                <RowConstraints vgrow="SOMETIMES"/>
-                                            </rowConstraints>
-                                            <children>
-                                                <TextField fx:id="usernameTextField" promptText="Username"
-                                                           styleClass="login-text-field" GridPane.rowIndex="1">
-                                                    <padding>
-                                                        <Insets/>
-                                                    </padding>
-                                                </TextField>
-                                                <PasswordField fx:id="pswPasswordField" promptText="Password"
-                                                               styleClass="login-password-field" GridPane.rowIndex="3">
-                                                    <opaqueInsets>
-                                                        <Insets/>
-                                                    </opaqueInsets>
-                                                    <padding>
-                                                        <Insets/>
-                                                    </padding>
-                                                </PasswordField>
-                                                <TextField fx:id="txtPasswordField" promptText="Password"
-                                                           styleClass="login-text-field" visible="false"
-                                                           GridPane.rowIndex="3">
-                                                    <opaqueInsets>
-                                                        <Insets/>
-                                                    </opaqueInsets>
-                                                </TextField>
-                                                <Hyperlink fx:id="forgotPasswordLink" text="Forgot your password?"
-                                                           GridPane.rowIndex="4" onAction="#handleForgotPassword"/>
-                                                <Button fx:id="loginButton" maxWidth="1.7976931348623157E308"
-                                                        mnemonicParsing="false" text="Login" GridPane.rowIndex="6"/>
-                                                <FontIcon iconLiteral="fas-user" iconSize="24" translateX="10.0"
-                                                          GridPane.rowIndex="1">
-                                                    <GridPane.margin>
-                                                        <Insets/>
-                                                    </GridPane.margin>
-                                                </FontIcon>
-                                                <FontIcon iconLiteral="fas-lock" iconSize="24" translateX="10.0"
-                                                          GridPane.rowIndex="3">
-                                                    <GridPane.margin>
-                                                        <Insets/>
-                                                    </GridPane.margin>cv x
-                                                </FontIcon>
-                                                <FontIcon fx:id="eyeSlashToggleButton"
-                                                          boundsType="LOGICAL_VERTICAL_CENTER"
-                                                          iconLiteral="fas-eye-slash" iconSize="24" textOrigin="CENTER"
-                                                          translateX="-10.0" GridPane.halignment="RIGHT"
-                                                          GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" styleClass="icon-clickable">
-                                                    <GridPane.margin>
-                                                        <Insets/>
-                                                    </GridPane.margin>
-                                                </FontIcon>
-                                                <Label fx:id="usernameMessage" GridPane.halignment="RIGHT"/>
-                                                <Label fx:id="passwordMessage" GridPane.halignment="RIGHT"
-                                                       GridPane.rowIndex="2"/>
-                                                <Label fx:id="errorMessage" GridPane.halignment="RIGHT"
-                                                       GridPane.rowIndex="5"/>
-                                            </children>
-                                        </GridPane>
-                                    </children>
-                                </HBox>
-                            </children>
-                            <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-                            </padding>
-                        </VBox>
-                        <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                            <children>
-                                <ImageView fitHeight="250.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true"
-                                           VBox.vgrow="ALWAYS">
-                                    <image>
-                                        <Image url="@../images/nub-cat-cake.gif"/>
-                                    </image>
-                                </ImageView>
-                            </children>
-                        </VBox>
-                    </children>
+    <!-- Main Content -->
+    <VBox alignment="CENTER" maxWidth="700.0" StackPane.alignment="CENTER">
+        <padding>
+            <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
+        </padding>
+        <HBox prefHeight="400.0" styleClass="container">
+            <VBox HBox.hgrow="ALWAYS">
+                <padding>
+                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                </padding>
+                <HBox VBox.vgrow="ALWAYS">
+                    <Label styleClass="title" text="Login Form"/>
                 </HBox>
-            </children>
-            <padding>
-                <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
-            </padding>
-        </VBox>
+                <HBox minWidth="300.0" VBox.vgrow="NEVER">
+                    <GridPane alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" vgap="5.0"
+                              HBox.hgrow="ALWAYS">
+                        <columnConstraints>
+                            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES"
+                                               maxWidth="1.7976931348623157E308"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints valignment="CENTER"/>
+                            <RowConstraints vgrow="SOMETIMES"/>
+                            <RowConstraints valignment="CENTER"/>
+                            <RowConstraints vgrow="SOMETIMES"/>
+                            <RowConstraints vgrow="SOMETIMES"/>
+                            <RowConstraints valignment="CENTER"/>
+                            <RowConstraints vgrow="SOMETIMES"/>
+                        </rowConstraints>
+                        <TextField fx:id="usernameTextField" promptText="Username"
+                                   styleClass="login-text-field" GridPane.rowIndex="1">
+                            <padding>
+                                <Insets/>
+                            </padding>
+                        </TextField>
+                        <PasswordField fx:id="pswPasswordField" promptText="Password"
+                                       styleClass="login-password-field" GridPane.rowIndex="3">
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <padding>
+                                <Insets/>
+                            </padding>
+                        </PasswordField>
+                        <TextField fx:id="txtPasswordField" promptText="Password"
+                                   styleClass="login-text-field" visible="false"
+                                   GridPane.rowIndex="3">
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                        </TextField>
+                        <Hyperlink fx:id="forgotPasswordLink" text="Forgot your password?"
+                                   GridPane.rowIndex="4" onAction="#handleForgotPassword"/>
+                        <Button fx:id="loginButton" maxWidth="1.7976931348623157E308"
+                                mnemonicParsing="false" text="Login" GridPane.rowIndex="6"/>
+                        <FontIcon iconLiteral="fas-user" iconSize="24" translateX="10.0"
+                                  GridPane.rowIndex="1">
+                            <GridPane.margin>
+                                <Insets/>
+                            </GridPane.margin>
+                        </FontIcon>
+                        <FontIcon iconLiteral="fas-lock" iconSize="24" translateX="10.0"
+                                  GridPane.rowIndex="3">
+                            <GridPane.margin>
+                                <Insets/>
+                            </GridPane.margin>
+                            cv x
+                        </FontIcon>
+                        <FontIcon fx:id="eyeSlashToggleButton"
+                                  boundsType="LOGICAL_VERTICAL_CENTER"
+                                  iconLiteral="fas-eye-slash" iconSize="24" textOrigin="CENTER"
+                                  translateX="-10.0" GridPane.halignment="RIGHT"
+                                  GridPane.hgrow="ALWAYS" GridPane.rowIndex="3"
+                                  styleClass="icon-clickable">
+                            <GridPane.margin>
+                                <Insets/>
+                            </GridPane.margin>
+                        </FontIcon>
+                        <Label fx:id="usernameMessage" GridPane.halignment="RIGHT"/>
+                        <Label fx:id="passwordMessage" GridPane.halignment="RIGHT"
+                               GridPane.rowIndex="2"/>
+                        <Label fx:id="errorMessage" GridPane.halignment="RIGHT"
+                               GridPane.rowIndex="5"/>
+                    </GridPane>
+                </HBox>
+            </VBox>
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                <ImageView fitHeight="250.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true"
+                           VBox.vgrow="ALWAYS">
+                    <Image url="@../images/nub-cat-cake.gif"/>
+                </ImageView>
+            </VBox>
+        </HBox>
+    </VBox>
 
-    </children>
 </StackPane>
