--- a/src/main/resources/views/ProductView.fxml
+++ b/src/main/resources/views/ProductView.fxml
@@ -8,28 +8,24 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.ProductViewController">
+<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.cakeshopsystem.controllers.ProductViewController">
 
-    <StackPane AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+    <StackPane AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0"
+               AnchorPane.topAnchor="20.0">
 
         <!-- scrollable main content -->
         <ScrollPane fx:id="mainScrollPane" fitToWidth="true" hbarPolicy="NEVER">
-            <!-- IMPORTANT: don't center the VBox, let it fill width -->
-            <VBox spacing="15">
-<!--                &lt;!&ndash; top bar &ndash;&gt;-->
-<!--                <HBox alignment="CENTER_RIGHT">-->
-<!--                    <Button fx:id="addNewProductBtn" mnemonicParsing="false" text="Add New Product" />-->
-<!--                </HBox>-->
 
+            <VBox spacing="15">
                 <!-- horizontal scrollers -->
                 <ScrollPane fx:id="discountedItemsScrollPane" fitToHeight="true" pannable="true" vbarPolicy="NEVER">
                     <VBox spacing="10">
-                        <Label styleClass="title" text="Discounted Items" />
+                        <Label styleClass="title" text="Discounted Items"/>
                         <HBox fx:id="discountedItemsHBox" spacing="30">
                             <padding>
-                                <Insets bottom="20" left="20" right="20" top="20" />
+                                <Insets bottom="20" left="20" right="20" top="20"/>
                             </padding>
                         </HBox>
                     </VBox>
@@ -38,10 +34,10 @@
 
                 <ScrollPane fx:id="cakeScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label styleClass="title" text="Cakes" />
+                        <Label styleClass="title" text="Cakes"/>
                         <HBox fx:id="cakeHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
                             </padding>
                         </HBox>
                     </VBox>
@@ -49,10 +45,10 @@
 
                 <ScrollPane fx:id="drinkScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label styleClass="title" text="Drinks" />
+                        <Label styleClass="title" text="Drinks"/>
                         <HBox fx:id="drinkHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
                             </padding>
                         </HBox>
                     </VBox>
@@ -60,10 +56,10 @@
 
                 <ScrollPane fx:id="bakedGoodScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label styleClass="title" text="Baked Goods" />
+                        <Label styleClass="title" text="Baked Goods"/>
                         <HBox fx:id="bakedGoodHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
                             </padding>
                         </HBox>
                     </VBox>
@@ -71,10 +67,10 @@
 
                 <ScrollPane fx:id="accessoryScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label styleClass="title" text="Accessories" />
+                        <Label styleClass="title" text="Accessories"/>
                         <HBox fx:id="accessoryHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
                             </padding>
                         </HBox>
                     </VBox>
@@ -83,19 +79,13 @@
         </ScrollPane>
 
         <!-- floating overlay button -->
-        <HBox spacing="10.0" fillHeight="false" maxWidth="-Infinity" maxHeight="-Infinity" StackPane.alignment="TOP_RIGHT">
+        <HBox spacing="10.0" fillHeight="false" maxWidth="-Infinity" maxHeight="-Infinity"
+              StackPane.alignment="TOP_RIGHT">
             <padding>
                 <Insets top="10.0" right="10.0"/>
             </padding>
             <Button fx:id="processExpiredBtn" mnemonicParsing="false" text="Process Expired Inventory"/>
             <Button fx:id="addNewProductBtn" mnemonicParsing="false" text="Add New Product"/>
         </HBox>
-
-<!--        <Button fx:id="cartBtn" mnemonicParsing="false" text="Cart" StackPane.alignment="BOTTOM_RIGHT">-->
-<!--            <graphic>-->
-<!--                <FontIcon iconLiteral="fas-cart-plus" iconSize="15" styleClass="cart-icon" />-->
-<!--            </graphic>-->
-<!--        </Button>-->
-
     </StackPane>
 </AnchorPane>
