--- a/src/main/resources/views/RegisterMember.fxml
+++ b/src/main/resources/views/RegisterMember.fxml
@@ -29,7 +29,7 @@
 
             <HBox alignment="CENTER_RIGHT" spacing="10">
                 <Region HBox.hgrow="ALWAYS" />
-                <Button fx:id="btnCancel" text="Cancel" />
+                <Button fx:id="btnCancel" text="Cancel" styleClass="cancel-btn"/>
                 <Button fx:id="btnConfirm" defaultButton="true" text="Yes, Register" />
             </HBox>
         </VBox>
