--- a/src/main/resources/views/admin/EditProduct.fxml
+++ b/src/main/resources/views/admin/EditProduct.fxml
@@ -4,10 +4,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx/25"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.cakeshopsystem.controllers.admin.EditProductController">
-
+    <padding>
+        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
+    </padding>
     <VBox alignment="TOP_CENTER"
           maxWidth="560"
           spacing="16"
