--- a/src/main/resources/views/admin/MemberView.fxml
+++ b/src/main/resources/views/admin/MemberView.fxml
@@ -7,29 +7,25 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane styleClass="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.MemberViewController">
-    <children>
-        <!-- anchor 30 30 50 30 -->
-        <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0"
-              spacing="20.0" AnchorPane.bottomAnchor="50.0"
-              AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
-            <children>
-                <HBox alignment="TOP_RIGHT">
-                    <children>
-                        <TextField fx:id="txtSearch" promptText="Search"/>
-                    </children>
-                </HBox>
-                <TableView fx:id="memberTableView" VBox.vgrow="ALWAYS">
-                    <columns>
-                        <TableColumn fx:id="colName" minWidth="200.0" text="Name"/>
-                        <TableColumn fx:id="colPhoneNumber" minWidth="200.0" text="Phone Number"/>
-                    </columns>
-                    <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                    </columnResizePolicy>
-                </TableView>
-            </children>
-        </VBox>
-    </children>
+<AnchorPane styleClass="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.cakeshopsystem.controllers.admin.MemberViewController">
+    <!-- anchor 20 20 20 20 -->
+    <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0"
+          spacing="20.0" AnchorPane.bottomAnchor="20.0"
+          AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+        <HBox alignment="TOP_RIGHT">
+            <TextField fx:id="txtSearch" promptText="Search"/>
+        </HBox>
+        <TableView fx:id="memberTableView" VBox.vgrow="ALWAYS">
+            <columns>
+                <TableColumn fx:id="colName" minWidth="200.0" text="Name"/>
+                <TableColumn fx:id="colPhoneNumber" minWidth="200.0" text="Phone Number"/>
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            </columnResizePolicy>
+        </TableView>
+    </VBox>
 </AnchorPane>
